Fix issue with advancement selection hint overflowing container

--- a/dnd5e.css
+++ b/dnd5e.css
@@ -658,7 +658,7 @@
   mix-blend-mode: difference;
 }
 .dnd5e.advancement .items-list .item-hint {
-  flex-basis: 100%;
+  flex: 0 1 100%;
   margin-left: 35px;
   margin-bottom: 0.5em;
 }
