--- a/less/apps.less
+++ b/less/apps.less
@@ -674,7 +674,7 @@
       mix-blend-mode: difference;
     }
     .item-hint {
-      flex-basis: 100%;
+      flex: 0 1 100%;
       margin-left: 35px;
       margin-bottom: 0.5em;
     }
